--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,22 +1,32 @@
 spring:
+  data:
+    mongodb:
+      uri: mongodb://localhost:27017/configdb
+
   datasource:
     driver-class-name: org.postgresql.Driver
     username: postgres
     url: jdbc:postgresql://localhost:5432/configdb
     password: root
+
   application:
     name: config-server
+
   cloud:
     config:
       server:
-#        jdbc:
-#          sql: SELECT key, value FROM properties WHERE application=? AND profile=? AND label=?
-#          enabled: true
-#          order: 1
+        mongodb:
+          order: 0
+          enabled: true
+          collection: properties
+        jdbc:
+          sql: SELECT key, value FROM properties WHERE application=? AND profile=? AND label=?
+          enabled: true
+          order: 1
         vault:
           authentication: token
           token: root
-          order: 1
+          order: 2
           host: 127.0.0.1
           port: 8200
           scheme: http
@@ -26,7 +36,7 @@ spring:
           profile-separator: /
 
   profiles:
-    active: vault
+    active: mongodb # jdbc, vault or mongodb
 server:
   port: 8888
 
